# clang-tidy-automotive

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.TXT  M_C_2023_headings.json  M_C_2023_mapping.json  NAMING-CONVENTION.md  README.md  build.sh  setup.sh  test.c  test.sh
.github/workflows/: github-actions-check-copyright.yml
backup/: configure.sh  download.sh  setup.sh
backup/prepatch/: ClangTidyOptions.h  README
clang-tidy/: CMakeLists.txt  README.md
clang-tidy/v20/: CMakeLists.txt  ClangTidy.cpp  ClangTidyDiagnosticMapping.cpp
cmake/: ClangTidyOutOfTree.cmake
docker/: Dockerfile
docs/: CMakeLists.txt  Doxyfile.in
mapping/: .clang-tidy  M_C_2023_mapping.json
prepatch/: ClangTidy.cpp  ClangTidyDiagnosticConsumer.cpp  ClangTidyDiagnosticConsumer.h  ClangTidyModule.cpp  ClangTidyOptions.cpp  ClangTidyOptions.h  backup.sh
scripts/: check-copyright.py  container-bash.sh  container-rebuild.sh
scripts/checkengine/: engine.py
src/: ClangTidy.h  ClangTidyCheck.h  ClangTidyDiagnosticMapping.cpp  ClangTidyDiagnosticMapping.h  ClangTidyModule.h  ClangTidyModuleRegistry.h  ClangTidyOptions.h
src/automotive/: AutomotiveTidyModule.cpp  CMakeLists.txt
src/automotive/array/: AvoidPartialArrayInitCheck.h  CMakeLists.txt  MissingExternalArraySizeCheck.h
src/automotive/bitfield/: CMakeLists.txt
src/automotive/cmake/: AutomotiveBuildMode.cmake
src/automotive/comment/: AvoidCommentWithinCommentCheck.cpp  AvoidCommentWithinCommentCheck.h  AvoidLinesplicingWithinCommentCheck.cpp  CMakeLists.txt
src/automotive/expression/: AvoidSideEffectInLogicalOperandCheck.h  CMakeLists.txt  ExpressionComponent.cpp
src/automotive/function/: CMakeLists.txt
src/automotive/literal/: CMakeLists.txt
src/automotive/operator/: CMakeLists.txt  WrongShiftOperandCheck.cpp  WrongShiftOperandCheck.h
src/automotive/pointer/: AvoidCastRemovingQualifierCheck.h  CMakeLists.txt
src/automotive/preprocessor/: AvoidCodeBeforeIncludeCheck.h  AvoidInvalidHeaderCharCheck.h  AvoidReservedMacroIdentifierCheck.h  CMakeLists.txt  PreprocessorFlowCheck.h  UnusedMacroCheck.h
src/automotive/return/: CMakeLists.txt
src/automotive/statement/: AvoidBooleanInSwitchCheck.h  CMakeLists.txt  ForwardGotoLabelCheck.h  MissingBreakInCaseStmtCheck.h  MissingCompoundStmtCheck.h  MissingElseCheck.h  UnstructuredSwitchStmtCheck.h  UnusedLabelCheck.h  WrongOrderInSwitchStmtCheck.h
src/automotive/stdlib/: AvoidSignalHeaderCheck.cpp  CMakeLists.txt
src/automotive/storage/: AvoidReservedIdentifierDeclarationCheck.h  CMakeLists.txt
src/automotive/type/: CMakeLists.txt
src/automotive/unused-code/: CMakeLists.txt  UnusedObjectDefinitionCheck.h  UnusedParameterCheck.h  UnusedTagCheck.h
src/automotive/utils/: ASTMatchers.h  CMakeLists.txt
test/: lit.cfg.py  llvm-lit.sh
test/checkers/automotive/array/: avoid-flexible-array-member.c
test/checkers/automotive/c2023/11.8/: cast-removing-qualifier.c
test/checkers/automotive/c2023/12.2/: wrong-shift-operand.c
test/checkers/automotive/c2023/13.5/: side-effect-in-logical-operand.c
test/checkers/automotive/c2023/2.7/: unused-parameter.c
test/checkers/automotive/comment/: avoid-line-splicing-within-comment.c
test/checkers/automotive/operator/: avoid-comma-operator.c
test/checkers/automotive/return/: no-return-void.c
test/checkers/automotive/statement/: back-jump-goto.c  missing-compound-do-while.c  missing-compound-for.c  no-boolean-in-switch.c
test/checkers/automotive/stdlib/: avoid-stdlib-exit.c  avoid-stdlib-rand.c
test/checkers/automotive/type/: implicit-int.c
tool/: ClangTidyDiagnosticMapping.cpp  ClangTidyDiagnosticMapping.h
